--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,13 @@
 #root {
     max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+    // margin: 0 auto;
+    // padding: 2rem;
+    // text-align: center;
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 6rem;
+    text-align: left;
+    line-height: 6rem;
+    margin: 0 0 4px 0;
 }
