--- a/src/components/PhysicsCanvas/PhysicsCanvas.module.scss
+++ b/src/components/PhysicsCanvas/PhysicsCanvas.module.scss
@@ -1,5 +1,5 @@
 .container {
-    width: 800px;
-    height: 600px;
-    border: 2px solid #A2D5CA;
+    width: 100vw;
+    height: 100vh;
+    // border: 2px solid #A2D5CA;
 }
