--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,10 @@
+// colors
 $color-green: #D4EBCC;
 $color-purple: #D4DAEF;
+$color-purple-100: #8a94b9;
 $color-cream-100: #F3DDE2;
 $color-cream-200: #F7E6EA;
 $color-cream-300: #FAEFF2;
-
 $color-green-100: #A2D5CA;
 $color-green-200: #B1E0D6;
+$color-green-300: rgb(117, 162, 152);
