--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -2,8 +2,10 @@
     * {
         box-sizing: border-box;
     }
+
     color: $color-green-300;
 }
+
 .content {
     position: fixed;
     display: flex;
@@ -13,7 +15,7 @@
     pointer-events: none;
     justify-content: space-between;
 
-    > * {
+    >* {
         pointer-events: auto;
     }
 }
@@ -24,6 +26,53 @@
 
 .footer {
     margin-right: 2rem;
-    margin-bottom: .5rem;;
+    margin-bottom: .5rem;
+    ;
     align-self: flex-end;
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.animatedButton {
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: transparent;
+    position: relative;
+    color: $color-green-300;
+    font-size: 1.5rem;
+    cursor: pointer;
+
+    &::after {
+        content: '';
+        display: block;
+        width: 100%;
+        // height: 100%;
+        aspect-ratio: 1;
+        transform: translate(0, -50%) scale(1.1);
+        position: absolute;
+        top: 50%;
+        left: 0;
+        // background-color: $color-green-300;
+        border: 1px solid $color-green-300;
+        border-radius: 999px;
+        z-index: -1;
+        transition: opacity 0.3s, transform 0.3s ease-in-out;
+        opacity: 0;
+    }
+
+    &:hover {
+
+        // background-color: $color-green-300;
+        &::after {
+            transform: translate(0, -50%) scale(1);
+            transition: opacity 0.3s, transform 0.3s ease-in-out;
+            opacity: 1;
+        }
+    }
 }
