--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,3 +8,7 @@ $color-cream-300: #FAEFF2;
 $color-green-100: #A2D5CA;
 $color-green-200: #B1E0D6;
 $color-green-300: rgb(117, 162, 152);
+
+// fonts
+$font-primary: Elsie;
+$font-secondary: Inter;
