--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -14,6 +14,7 @@
     height: 100%;
     pointer-events: none;
     justify-content: space-between;
+    z-index: 10;
 
     >* {
         pointer-events: auto;
@@ -22,6 +23,8 @@
 
 .header {
     margin: 2rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .footer {
@@ -47,6 +50,7 @@
     color: $color-green-300;
     font-size: 1.5rem;
     cursor: pointer;
+    font-family: 'Space Mono';
 
     &::after {
         content: '';
@@ -74,5 +78,39 @@
             transition: opacity 0.3s, transform 0.3s ease-in-out;
             opacity: 1;
         }
+    }
+
+    &:focus {
+        outline: none;
+    }
+
+    &.animatedButtonActive {
+        animation: startAnimationText 1s ease-in-out forwards;
+        &::after {
+            opacity: 1;
+            animation: startAnimation 1s ease-in-out forwards;
+        }
+    }
+}
+
+@keyframes startAnimation {
+    30% {
+        transform: translate(0, -50%) scale(1.5);
+    }
+    50% {
+        transform: translate(0, -50%) scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: translate(0, -50%) scale(5);
+        opacity: 0;
+    }
+}
+@keyframes startAnimationText {
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
