--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,10 @@
 #root {
-    max-width: 1280px;
-    // margin: 0 auto;
-    // padding: 2rem;
-    // text-align: center;
+  max-width: 1280px;
 }
 
 h1 {
-    font-size: 6rem;
-    text-align: left;
-    line-height: 6rem;
-    margin: 0 0 4px 0;
+  font-size: 6rem;
+  text-align: left;
+  line-height: 6rem;
+  margin: 0 0 4px;
 }
