--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,12 @@
 // colors
-$color-green: #D4EBCC;
-$color-purple: #D4DAEF;
+$color-green: #d4ebcc;
+$color-purple: #d4daef;
 $color-purple-100: #8a94b9;
-$color-cream-100: #F3DDE2;
-$color-cream-200: #F7E6EA;
-$color-cream-300: #FAEFF2;
-$color-green-100: #A2D5CA;
-$color-green-200: #B1E0D6;
+$color-cream-100: #f3dde2;
+$color-cream-200: #f7e6ea;
+$color-cream-300: #faeff2;
+$color-green-100: #a2d5ca;
+$color-green-200: #b1e0d6;
 $color-green-300: rgb(117, 162, 152);
 
 // fonts
