--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -1,116 +1,118 @@
 .main {
-    * {
-        box-sizing: border-box;
-    }
+  * {
+    box-sizing: border-box;
+  }
 
-    color: $color-green-300;
+  color: $color-green-300;
 }
 
 .content {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    justify-content: space-between;
-    z-index: 10;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  justify-content: space-between;
+  z-index: 10;
 
-    >* {
-        pointer-events: auto;
-    }
+  > * {
+    pointer-events: auto;
+  }
 }
 
 .header {
-    margin: 2rem;
-    display: flex;
-    justify-content: space-between;
+  margin: 2rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer {
-    margin-right: 2rem;
-    margin-bottom: .5rem;
-    ;
-    align-self: flex-end;
+  margin-right: 2rem;
+  margin-bottom: 0.5rem;
+  align-self: flex-end;
 }
 
 .controls {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .animatedButton {
-    margin: 1rem;
-    padding: 1rem;
-    border-radius: 1rem;
-    background-color: transparent;
-    position: relative;
-    color: $color-green-300;
-    font-size: 1.5rem;
-    cursor: pointer;
-    font-family: 'Space Mono';
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: transparent;
+  position: relative;
+  color: $color-green-300;
+  font-size: 1.5rem;
+  cursor: pointer;
+  font-family: "Space Mono";
 
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    // height: 100%;
+    aspect-ratio: 1;
+    transform: translate(0, -50%) scale(1.1);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    // background-color: $color-green-300;
+    border: 1px solid $color-green-300;
+    border-radius: 999px;
+    z-index: -1;
+    transition:
+      opacity 0.3s,
+      transform 0.3s ease-in-out;
+    opacity: 0;
+  }
+
+  &:hover {
+    // background-color: $color-green-300;
     &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        // height: 100%;
-        aspect-ratio: 1;
-        transform: translate(0, -50%) scale(1.1);
-        position: absolute;
-        top: 50%;
-        left: 0;
-        // background-color: $color-green-300;
-        border: 1px solid $color-green-300;
-        border-radius: 999px;
-        z-index: -1;
-        transition: opacity 0.3s, transform 0.3s ease-in-out;
-        opacity: 0;
+      transform: translate(0, -50%) scale(1);
+      transition:
+        opacity 0.3s,
+        transform 0.3s ease-in-out;
+      opacity: 1;
     }
+  }
 
-    &:hover {
+  &:focus {
+    outline: none;
+  }
 
-        // background-color: $color-green-300;
-        &::after {
-            transform: translate(0, -50%) scale(1);
-            transition: opacity 0.3s, transform 0.3s ease-in-out;
-            opacity: 1;
-        }
+  &.animatedButtonActive {
+    animation: startAnimationText 1s ease-in-out forwards;
+    &::after {
+      opacity: 1;
+      animation: startAnimation 1s ease-in-out forwards;
     }
-
-    &:focus {
-        outline: none;
-    }
-
-    &.animatedButtonActive {
-        animation: startAnimationText 1s ease-in-out forwards;
-        &::after {
-            opacity: 1;
-            animation: startAnimation 1s ease-in-out forwards;
-        }
-    }
+  }
 }
 
 @keyframes startAnimation {
-    30% {
-        transform: translate(0, -50%) scale(1.5);
-    }
-    50% {
-        transform: translate(0, -50%) scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: translate(0, -50%) scale(5);
-        opacity: 0;
-    }
+  30% {
+    transform: translate(0, -50%) scale(1.5);
+  }
+  50% {
+    transform: translate(0, -50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(0, -50%) scale(5);
+    opacity: 0;
+  }
 }
 @keyframes startAnimationText {
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
